# origo

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  deploy.sh  docker-compose.yml
include/: config.hpp  messages.hpp  router.hpp
include/handlers/: IHandler.hpp  StubHandler.hpp  TestHandler.hpp
src/: main.cpp
